user commands for external programs are seperated by space now since the comma just 
   made problems for options like "--driver generic-mmc" which had to be specified
   as "--driver, generic-mmc"
support for newer versions of cdrecord which have a slighly changed user interface
support for cuefile writing with cdrecord > 2.01a14
support for writing CD-Text with cdrecord
support for writing audio CDs on-the-fly with cdrecord >= 2.01a13

0.8.1
fixed compiling problems with kernel < 2.4.3
fixed onlyCreateImage in data project
fixed handling of cdrecord burnfree/burnproof driveroption in versions < 1.10
fixed error with localized docking config that caused empty windows when changing the language
introduced workaround for serious cdrdao bug that caused tocfiles to be deleted
disabled the delete shortcut in the fileview (way too many users deleted files by accident when they 
	wanted to remove project items)

0.8
advanced options: manually selection of writing app (cdrecord or cdrdao)

changed the option dialog layout -> smaller window

fixed problems with first pregap in audio project:
  no need to set the first pregap to 0 on some writers anymore
  no 4 second pregap before first tracks anymore

fixed problems with detecting some audio tracks that had flags like preemp set
	
removed cdparanoia dependancy (dynamic linking)
big internal changes
split bin/cue writing from iso-image-writing
better cdcopy (mainly more options)
customizeable audio ripping

mixed mode cd creation
video cd creation
video cd on cd-i support
better error handling

indivdual selection of final size for encoded movie
clean vob dir before start and restore it (i.e playing wiht PowerDVD stores
config files in the directory)

AC3-passthrough mode for DIVX Encoding
DND for AudioCD-Ripping to harddisc.


0.7.5
Added session import
little reordering of menus
fixed the "cdrecord error 255" bug
fixed some i18n issues
improved mp3 file detection
added K3b project mimetype